# ruby-butler

./: .shellcheckrc  .shellspec  .yamllint  CHANGELOG.md  Cargo.toml  Dockerfile  IDEAS.md  Makefile  README.md  docker-compose.yml  shellspec
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/rb-cli/: Cargo.toml  README.md  build.rs
crates/rb-cli/src/: completion.rs  discovery.rs  dispatch.rs  error_display.rs  help_formatter.rs  lib.rs  runtime_helpers.rs
crates/rb-cli/src/commands/: environment.rs  exec.rs  help.rs  init.rs  mod.rs  new.rs  run.rs  runtime.rs  shell_integration.rs  sync.rs  version.rs
crates/rb-cli/src/commands/info/: config.rs  env.rs  mod.rs  project.rs  runtime.rs
crates/rb-cli/src/config/: loader.rs  locator.rs  mod.rs  value.rs
crates/rb-cli/tests/: cli_command_tests.rs  cli_commands_tests.rs  completion_tests.rs  core_integration_tests.rs  dispatch_tests.rs  error_display_tests.rs  help_formatter_tests.rs  integration_tests.rs  runtime_helpers_tests.rs
crates/rb-core/: Cargo.toml
crates/rb-core/src/: command.rs  lib.rs
crates/rb-core/src/bundler/: detector.rs  mod.rs
crates/rb-core/src/butler/: command.rs  env_provider.rs  mod.rs  runtime_provider.rs
crates/rb-core/src/gems/: mod.rs
crates/rb-core/src/gems/gem_path_detector/: bundler_isolation.rs  custom_gem_base.rs  mod.rs  user_gems.rs
crates/rb-core/src/project/: detector.rs  mod.rs  template.rs
crates/rb-core/src/ruby/: detector.rs  mod.rs  version_ext.rs
crates/rb-core/src/ruby/version_detector/: gemfile.rs  mod.rs  ruby_version_file.rs
crates/rb-core/tests/: bundler_demo_tests.rs  bundler_integration_tests.rs  butler_env_tests.rs  butler_integration_tests.rs  detector_tests.rs
crates/rb-core/tests/common/: mod.rs
crates/rb-tests/: Cargo.toml
crates/rb-tests/src/: bundler_sandbox.rs  lib.rs  ruby_sandbox.rs
examples/: rb.kdl  rb.toml  rbproject.kdl  rbproject.toml
scripts/: validate-docker-setup.sh
spec/: spec_helper.sh
spec/behaviour/: bash_completion_nospace_integration_spec.sh  bash_completion_spec.sh  directory_completion_nospace_spec.sh  nothing_spec.sh  shell_integration_spec.sh
spec/commands/: config_spec.sh  environment_spec.sh  environment_vars_spec.sh  exec_spec.sh  help_spec.sh  init_spec.sh  project_spec.sh  run_spec.sh  runtime_spec.sh  sync_spec.sh  version_spec.sh
spec/commands/completion/: context_aware_spec.sh  path_completion_spec.sh
spec/commands/exec/: bundler_spec.sh  (+2 more)
spec/support/: helpers.sh
tests/: INTEGRATION_TESTING.md  README.md  Setup.ps1  ruby-butler.Tests.ps1
tests/commands/: Config.Integration.Tests.ps1  Environment.Integration.Tests.ps1  Help.Unit.Tests.ps1  Init.Integration.Tests.ps1  Project.Integration.Tests.ps1  Run.Integration.Tests.ps1  Runtime.Integration.Tests.ps1  Sync.Integration.Tests.ps1  Version.Integration.Tests.ps1
tests/errors/: CommandNotFound.Integration.Tests.ps1  DirectoryNotFound.Integration.Tests.ps1
tests/integration/: basic_runtime.bats  basic_runtime.tap.sh  bundler_integration.bats  cli_commands.bats  complex_bundler.bats  edge_cases.bats  helpers.bash
tests/windows/: ExecutableResolution.Integration.Tests.ps1
(+9 files in other folders)
