[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RubyElders.com"]
description = "A modern Ruby version manager inspired by cargo, uv, and npm"
readme = "README.md"
repository = "https://github.com/user/ruby-butler2"
license = "MIT OR Apache-2.0"
keywords = ["ruby", "version-manager", "cli", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

