[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RubyElders.com"]
description = "A sophisticated Ruby environment manager that orchestrates installations and gem collections with distinguished precision"
readme = "README.md"
repository = "https://github.com/user/ruby-butler2"
license = "MIT OR Apache-2.0"
keywords = ["ruby", "environment-manager", "cli", "development-tools", "butler"]
categories = ["command-line-utilities", "development-tools"]

