[package]
name = "rb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for Ruby Butler"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "rb_cli"
path = "src/lib.rs"

[[bin]]
name = "rb"
path = "src/bin/rb.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color", "help", "usage"] }
rb-core = { path = "../rb-core" }
home = "0.5"
colored = "2.0"
log = "0.4"
env_logger = "0.11"
semver = "1.0.26"

[dev-dependencies]
rb-tests = { path = "../rb-tests" }
