[package]
name = "rb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sophisticated core library for Ruby environment detection and orchestration"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex = "1.11.1"
semver = "1.0.26"
home = "0.5"
log = "0.4"
colored = "2.1.0"
which = "6.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.21.0"
rb-tests = { path = "../rb-tests" }
